[workspace]
members = [
    "asyncmemo",
    # depends on failure_ext
    # "blobrepo",
    # "blobstore",
    # "bookmarks",
    # "bundle2-resolver",
    "bytes-ext",
    # depends on failure_ext
    # "changesets",
    # "common/pylz4",
    # "eden_server",
    "futures-ext",
    "storage/types",
]
