[workspace]
members = [
    "asyncmemo",
    # depends on failure_ext
    # "blobrepo",
    # "blobstore",
    # "bookmarks",
    # "bundle2-resolver",
    "bytes-ext",
    # depends on failure_ext
    # "changesets",
    # "common/pylz4",
    # "eden_server",
    # "filenodes",
    "futures-ext",
    # depends on failure_ext
    # "hgcli",
    # "hgproto",
    # "hooks",
    # "mercurial-types",
    # "mercurial",
    # "metaconfig",
    # "mononoke-types",
    # "repoinfo",
    # "revset",
    # "server",
    # depends on netstring crate internal at fb
    # "sshrelay",
    "storage/types",
]
