[workspace]
members = [
    # build error related to tokio_io::AsyncWrite
    # "async-compression",
    # "mercurial-bundles",
    "asyncmemo",
    # depends on failure_ext
    # "blobrepo",
    # "blobstore",
    # "bookmarks",
    # "bundle2-resolver",
    "bytes-ext",
    # depends on failure_ext
    # "changesets",
    # "common/pylz4",
    # "eden_server",
    # "filenodes",
    "futures-ext",
    # depends on failure_ext
    # "hgcli",
    # "hgproto",
    # "hooks",
    # "mercurial-types",
    # "mercurial",
    # "metaconfig",
    # "mononoke-types",
    # "repoinfo",
    # "revset",
    # "server",
    # "storage/filekv",
    # "vfs",
    # depends on netstring crate internal at fb
    # "sshrelay",
    "storage/types",
]
