[package]
name = "blobrepo"
version = "0.0.1"
authors = ["Facebook"]
license = "GPLv2+"

[dependencies]
bincode = "0.9.2"
bytes = "0.4.5"
error-chain = "0.11.0"
futures = "0.1.17"
heapsize = "0.4.1"
heapsize_derive = "0.1.4"
serde = "1.0.20"
serde_derive = "1.0.20"
tokio-core = "0.1.10"

blobstore = { path = "../blobstore" }
bookmarks = { path = "../bookmarks" }
fileblob = { path = "../blobstore/fileblob" }
filebookmarks = { path = "../bookmarks/filebookmarks" }
fileheads = { path = "../heads/fileheads" }
filelinknodes = { path = "../linknodes/filelinknodes" }
futures-ext = { path = "../futures-ext" }
heads = { path = "../heads" }
linknodes = { path = "../linknodes" }
