[package]
name = "filekv"
version = "0.0.1"
authors = ["Facebook"]
license = "GPLv2+"

[dependencies]
bincode = "0.9.2"
error-chain = "0.11.0"
futures = "0.1.17"
futures-cpupool = "0.1.7"
nix = "0.9.0"
rand = "0.3.18"
serde = "1.0.20"

futures-ext = { path = "../../futures-ext" }
storage-types = { path = "../types" }
